--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
+    "storybook": "STORYBOOK_ENABLED='true' expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "storybook-generate": "sb-rn-get-stories"
   },
   "jest": {
     "preset": "jest-expo"
@@ -37,12 +39,22 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@gorhom/bottom-sheet": "^4.6.4",
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/slider": "^4.5.3",
+    "@storybook/addon-ondevice-actions": "^8.3.5",
+    "@storybook/addon-ondevice-controls": "^8.3.5",
+    "@storybook/react": "^8.3.5",
+    "@storybook/react-native": "^8.3.5",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "babel-loader": "^8.4.1",
     "detox": "^20.27.2",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.3",
+    "react-native-svg": "^15.7.1",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
