--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest --watchAll",
+    "test": "vitest --run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:snapshots": "vitest -u",
     "lint": "expo lint",
     "storybook-generate": "sb-rn-get-stories"
   },
@@ -51,16 +54,21 @@
     "@storybook/addon-ondevice-controls": "^8.3.5",
     "@storybook/react": "^8.3.5",
     "@storybook/react-native": "^8.3.5",
+    "@testing-library/react-native": "^12.7.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "@vitejs/plugin-react": "^4.3.2",
+    "@vitest/ui": "^2.1.2",
     "babel-loader": "^8.4.1",
     "detox": "^20.27.2",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.3",
     "react-native-svg": "^15.7.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "vitest": "^2.1.2",
+    "vitest-react-native": "^0.1.5"
   },
   "private": true
 }
