--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:snapshots": "vitest -u",
-    "lint": "expo lint",
+    "lint": "eslint src/* app/*",
     "storybook-generate": "sb-rn-get-stories"
   },
   "jest": {
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@eslint/js": "^9.12.0",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/datetimepicker": "^8.2.0",
@@ -55,6 +56,7 @@
     "@storybook/react": "^8.3.5",
     "@storybook/react-native": "^8.3.5",
     "@testing-library/react-native": "^12.7.2",
+    "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
@@ -62,11 +64,16 @@
     "@vitest/ui": "^2.1.2",
     "babel-loader": "^8.4.1",
     "detox": "^20.27.2",
+    "eslint": "^9.12.0",
+    "eslint-plugin-react": "^7.37.1",
+    "globals": "^15.11.0",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.3",
+    "prettier": "3.3.3",
     "react-native-svg": "^15.7.1",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3",
+    "typescript-eslint": "^8.8.1",
     "vitest": "^2.1.2",
     "vitest-react-native": "^0.1.5"
   },
