--- a/package.json
+++ b/package.json
@@ -65,10 +65,14 @@
     "babel-loader": "^8.4.1",
     "detox": "^20.27.2",
     "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.1",
     "globals": "^15.11.0",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.3",
+    "lint-staged": "^15.2.10",
     "prettier": "3.3.3",
     "react-native-svg": "^15.7.1",
     "react-test-renderer": "18.2.0",
