--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "safemobile",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "doctor": {
+    "reactNativeDirectoryCheck": {
+      "enabled": true
+    }
+  },
   "scripts": {
     "start": "expo start",
     "storybook": "STORYBOOK_ENABLED='true' expo start",
+    "storybook:ios": "STORYBOOK_ENABLED='true' expo run:ios --device",
+    "storybook:android": "STORYBOOK_ENABLED='true' expo start --android",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -25,6 +32,7 @@
     "@emotion/react": "^11.13.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
+    "@reduxjs/toolkit": "^2.2.8",
     "deepmerge": "^4.3.1",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
@@ -39,11 +47,15 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-mmkv": "2.12.2",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
+    "safe-client-gateway-sdk": "git+https://github.com/safe-global/safe-client-gateway-sdk.git#v1.54.0-next-5b02a33"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
