--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "react-hook-form": "7.41.1",
     "react-papaparse": "^4.0.2",
     "react-redux": "^9.1.2",
-    "safe-client-gateway-sdk": "git+https://github.com/safe-global/safe-client-gateway-sdk.git#v1.53.0-next-7344903",
+    "@safe-global/safe-client-gateway-sdk": "1.58.0-next-25bba61",
     "semver": "^7.6.3",
     "zodiac-roles-deployments": "^2.2.5"
   },
