fix: natively support clear signing with Ledger

--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@gnosis.pm/zodiac": "^4.0.3",
+    "@ledgerhq/context-module": "^1.0.0",
+    "@ledgerhq/device-management-kit": "^0.4.0",
+    "@ledgerhq/device-signer-kit-ethereum": "^1.0.0",
     "@mui/icons-material": "^5.14.20",
     "@mui/material": "^5.16.7",
     "@mui/x-date-pickers": "^5.0.20",
@@ -69,7 +72,6 @@
     "@web3-onboard/core": "^2.21.4",
     "@web3-onboard/injected-wallets": "^2.11.2",
     "@web3-onboard/keystone": "^2.3.7",
-    "@web3-onboard/ledger": "2.3.2",
     "@web3-onboard/trezor": "^2.4.2",
     "@web3-onboard/walletconnect": "^2.5.4",
     "blo": "^1.1.1",
