--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@safe-global/safe-gateway-typescript-sdk": "^3.22.2",
     "date-fns": "^4.1.0",
     "deepmerge": "^4.3.1",
-    "expo": "~51.0.28",
+    "expo": "~51.0.38",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
@@ -66,9 +66,9 @@
     "@babel/core": "^7.20.0",
     "@eslint/js": "^9.12.0",
     "@gorhom/bottom-sheet": "^4.6.4",
-    "@react-native-async-storage/async-storage": "^2.0.0",
-    "@react-native-community/datetimepicker": "^8.2.0",
-    "@react-native-community/slider": "^4.5.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/slider": "4.5.2",
     "@storybook/addon-ondevice-actions": "^8.3.5",
     "@storybook/addon-ondevice-controls": "^8.3.5",
     "@storybook/react": "^8.3.5",
@@ -93,7 +93,7 @@
     "jest-expo": "~51.0.3",
     "lint-staged": "^15.2.10",
     "prettier": "3.3.3",
-    "react-native-svg": "^15.7.1",
+    "react-native-svg": "15.2.0",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3",
     "typescript-eslint": "^8.8.1",
