feat(ui): add design system based on tamagui
Adds tamagui as the design library of choice & removes
react-native-paper. We selected tamagui for its near native performance
and the ability to render both on React-Native and web.

--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
   },
   "dependencies": {
     "@cowprotocol/app-data": "^2.3.0",
-    "@emotion/native": "^11.11.0",
-    "@emotion/react": "^11.13.3",
+    "@safe-global/safe-gateway-typescript-sdk": "^3.22.2",
+    "date-fns": "^4.1.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.8",
-    "@safe-global/safe-gateway-typescript-sdk": "^3.22.2",
-    "date-fns": "^4.1.0",
+    "@tamagui/config": "^1.116.2",
+    "@tamagui/font-dm-sans": "^1.116.2",
     "deepmerge": "^4.3.1",
     "expo": "~51.0.38",
     "expo-constants": "~16.0.2",
@@ -54,14 +54,15 @@
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-mmkv": "2.12.2",
-    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
     "redux-devtools-expo-dev-plugin": "^0.2.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "safe-client-gateway-sdk": "git+https://github.com/safe-global/safe-client-gateway-sdk.git#v1.54.0-next-5b02a33",
+    "tamagui": "^1.116.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
