--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@gnosis.pm/zodiac": "^4.0.3",
+    "@lifi/widget": "^3.8.1",
     "@mui/icons-material": "^5.14.20",
     "@mui/material": "^5.16.7",
     "@mui/x-date-pickers": "^5.0.20",
@@ -57,12 +58,13 @@
     "@safe-global/api-kit": "^2.4.6",
     "@safe-global/protocol-kit": "^4.1.1",
     "@safe-global/safe-apps-sdk": "^9.1.0",
-    "@safe-global/safe-deployments": "1.37.12",
     "@safe-global/safe-client-gateway-sdk": "1.58.0-next-25bba61",
+    "@safe-global/safe-deployments": "1.37.12",
     "@safe-global/safe-gateway-typescript-sdk": "3.22.3-beta.15",
     "@safe-global/safe-modules-deployments": "^2.2.1",
     "@sentry/react": "^7.91.0",
     "@spindl-xyz/attribution-lite": "^1.4.0",
+    "@tanstack/react-query": "^5.59.16",
     "@walletconnect/utils": "^2.16.1",
     "@walletconnect/web3wallet": "^1.15.1",
     "@web3-onboard/coinbase": "^2.2.6",
@@ -93,6 +95,8 @@
     "react-papaparse": "^4.0.2",
     "react-redux": "^9.1.2",
     "semver": "^7.6.3",
+    "viem": "2.x",
+    "wagmi": "^2.12.24",
     "zodiac-roles-deployments": "^2.2.5"
   },
   "devDependencies": {
