--- a/package.json
+++ b/package.json
@@ -16,29 +16,27 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "vitest --run",
-    "test:watch": "vitest",
-    "test:ui": "vitest --ui --coverage.enabled=true",
-    "test:coverage": "vitest --coverage",
-    "test:snapshots": "vitest -u",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --collectCoverageFrom=\"./src/**\"",
+    "test:snapshots": "jest -u",
     "lint": "eslint src/* app/*",
     "lint:fix": "npm run lint -- --fix",
     "storybook-generate": "sb-rn-get-stories",
     "generate:icons": "node ./scripts/generateIconTypes.js",
     "prepare": "husky"
   },
-  "jest": {
-    "preset": "jest-expo"
-  },
   "dependencies": {
     "@cowprotocol/app-data": "^2.3.0",
-    "@safe-global/safe-gateway-typescript-sdk": "^3.22.2",
-    "date-fns": "^4.1.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.8",
+    "@safe-global/safe-gateway-typescript-sdk": "^3.22.2",
+    "@tamagui/babel-plugin": "^1.116.9",
     "@tamagui/config": "^1.116.2",
     "@tamagui/font-dm-sans": "^1.116.2",
+    "@tamagui/vite-plugin": "^1.116.9",
+    "date-fns": "^4.1.0",
     "deepmerge": "^4.3.1",
     "expo": "~51.0.38",
     "expo-constants": "~16.0.2",
@@ -79,10 +77,6 @@
     "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
-    "@types/react-test-renderer": "^18.0.7",
-    "@vitejs/plugin-react": "^4.3.2",
-    "@vitest/coverage-v8": "^2.1.2",
-    "@vitest/ui": "^2.1.2",
     "babel-loader": "^8.4.1",
     "detox": "^20.27.2",
     "eslint": "^9.12.0",
@@ -96,11 +90,8 @@
     "lint-staged": "^15.2.10",
     "prettier": "3.3.3",
     "react-native-svg": "15.2.0",
-    "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3",
-    "typescript-eslint": "^8.8.1",
-    "vitest": "^2.1.2",
-    "vitest-react-native": "^0.1.5"
+    "typescript-eslint": "^8.8.1"
   },
   "private": true
 }
