chore: update to nextjs 15

--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "@safe-global/safe-core-sdk-types/**/ethers": "^6.11.1",
     "@safe-global/protocol-kit/**/ethers": "^6.11.1",
     "@safe-global/api-kit/**/ethers": "^6.11.1",
-    "@gnosis.pm/zodiac/**/ethers": "^6.11.1"
+    "@gnosis.pm/zodiac/**/ethers": "^6.11.1",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   },
   "dependencies": {
     "@cowprotocol/widget-react": "^0.10.0",
@@ -48,7 +50,7 @@
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.3",
     "@emotion/server": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.13.0",
     "@gnosis.pm/zodiac": "^4.0.3",
     "@mui/icons-material": "^5.14.20",
     "@mui/material": "^5.16.7",
@@ -57,8 +59,8 @@
     "@safe-global/api-kit": "^2.4.6",
     "@safe-global/protocol-kit": "^4.1.1",
     "@safe-global/safe-apps-sdk": "^9.1.0",
-    "@safe-global/safe-deployments": "1.37.12",
     "@safe-global/safe-client-gateway-sdk": "v1.60.1",
+    "@safe-global/safe-deployments": "1.37.12",
     "@safe-global/safe-gateway-typescript-sdk": "3.22.3-beta.15",
     "@safe-global/safe-modules-deployments": "^2.2.1",
     "@sentry/react": "^7.91.0",
@@ -82,11 +84,11 @@
     "idb-keyval": "^6.2.1",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
-    "next": "^14.2.13",
+    "next": "15.0.2",
     "papaparse": "^5.3.2",
     "qrcode.react": "^3.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0-rc-02c0e824-20241028",
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-dropzone": "^14.2.3",
     "react-gtm-module": "^2.0.11",
     "react-hook-form": "7.41.1",
@@ -101,8 +103,8 @@
     "@faker-js/faker": "^9.0.3",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
-    "@next/bundle-analyzer": "^13.5.6",
-    "@next/mdx": "^14.2.11",
+    "@next/bundle-analyzer": "15.0.2",
+    "@next/mdx": "15.0.2",
     "@openzeppelin/contracts": "^4.9.6",
     "@safe-global/safe-core-sdk-types": "^5.0.1",
     "@sentry/types": "^7.74.0",
@@ -128,8 +130,8 @@
     "@types/mdx": "^2.0.13",
     "@types/node": "18.11.18",
     "@types/qrcode": "^1.5.5",
-    "@types/react": "^18.3.10",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "@types/react-gtm-module": "^2.0.3",
     "@types/semver": "^7.3.10",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
@@ -139,7 +141,7 @@
     "cypress-file-upload": "^5.0.8",
     "cypress-visual-regression": "^5.0.2",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.0",
+    "eslint-config-next": "15.0.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "eslint-plugin-prettier": "^4.0.0",
