--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -6,6 +6,7 @@ on:
   push:
     branches:
       - dev
+      - safenet
       - main
 
 concurrency:
@@ -60,7 +61,7 @@ jobs:
 
       # Dev
       - name: Deploy to the dev S3
-        if: startsWith(github.ref, 'refs/heads/dev')
+        if: startsWith(github.ref, 'refs/heads/dev') || startsWith(github.ref, 'refs/heads/safenet')
         env:
           BUCKET: s3://${{ secrets.AWS_DEVELOPMENT_BUCKET_NAME }}
         run: bash ./scripts/github/s3_upload.sh
