chore: fixing failing unit tests

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.13.0",
     "@gnosis.pm/zodiac": "^4.0.3",
-    "@mui/icons-material": "^5.14.20",
+    "@mui/icons-material": "5.16.7",
     "@mui/material": "^5.16.7",
     "@mui/x-date-pickers": "^5.0.20",
     "@reduxjs/toolkit": "^2.2.6",
@@ -95,6 +95,7 @@
     "react-papaparse": "^4.0.2",
     "react-redux": "^9.1.2",
     "semver": "^7.6.3",
+    "yarn": "^5.14.20",
     "zodiac-roles-deployments": "^2.2.5"
   },
   "devDependencies": {
@@ -120,9 +121,9 @@
     "@storybook/test": "^8.0.6",
     "@svgr/webpack": "^6.3.1",
     "@testing-library/cypress": "^8.0.7",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.4.2",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@typechain/ethers-v6": "^0.5.1",
     "@types/jest": "^29.5.4",
     "@types/js-cookie": "^3.0.6",
