--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,7 +41,8 @@
     "src/definitions.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "./jest.setup.js"
   ],
   "exclude": [
     "node_modules",
