--- a/package.json
+++ b/package.json
@@ -100,6 +100,8 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.1",
     "@cowprotocol/app-data": "^2.1.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.14.0",
     "@faker-js/faker": "^9.0.3",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
@@ -140,20 +142,20 @@
     "cypress": "^12.15.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-visual-regression": "^5.0.2",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "15.0.2",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-no-only-tests": "^3.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-storybook": "^0.8.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint": "^9.14.0",
+    "eslint-config-next": "^15.0.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-no-only-tests": "^3.3.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-storybook": "^0.11.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "fake-indexeddb": "^4.0.2",
     "gray-matter": "^4.0.3",
     "husky": "^9.0.11",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
     "mockdate": "^3.0.5",
-    "prettier": "^2.7.0",
+    "prettier": "^3.3.3",
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.0",
     "remark-heading-id": "^1.0.1",
