feat: Safe Proposers (#4426)
* init

* feat: Add remove delegate option and adjust delegate list layout (#4390)

* feat: Add remove delegate button, adjust delegate list layout

* feat: Update gateway-sdk package, add delegate form

* feat: Optimistically update delegates cache when adding or removing delegate

* fix: Add missing ga events, add enum

* chore: Update gateway-sdk package

* fix: Update setup settings layout

* fix: Add notifications when adding and removing proposer

* fix: Add validation for add proposer

* fix: Rename delegate to proposer

* fix: Rename variable for add proposer dialog

* fix: Align remove icons in tables

* fix: Handle update proposer in rtk query

* feat: Show Proposal chip for unsigned transactions in the queue (#4422)

* feat: Allow deletion of delegate transactions from the queue [SW-297] (#4400)

* init

* feat: Allow deletion of delegate transactions from the queue

* feat: Add text to signer view if tx is from proposer

* fix: Disable add proposer and delete proposer [SW-400] [SW-396] (#4429)

* fix: Disable add proposer and delete proposer

* fix: Account for owners that are proposers in CheckWallet

* fix: Adjust message when proposing transaction (#4435)

* feat: Edit proposer dialog [SW-391] [SW-396] (#4436)

* feat: Show proposer address in queue (#4443)

* fix: Hide tooltip on confirm button for proposers (#4444)

* fix: Use safe owner address for tenderly simulation with proposer (#4445)

* fix: Only show proposal chip if transaction is not pending (#4450)

* fix: Allow owners to be added as proposers [SW-407] [SW-428] [SW-381] (#4446)

* fix: Remove scrollbar when adding proposer

* fix: Allow owners being added as proposers

* fix: Add check that isProposing only when its also a creation

* fix: Update testid to fix add owner smoke test

* fix: Hide batch button for proposers (#4457)

* feat: Support hardware wallets for adding and removing proposer

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@safe-global/protocol-kit": "^4.1.1",
     "@safe-global/safe-apps-sdk": "^9.1.0",
     "@safe-global/safe-deployments": "1.37.12",
-    "@safe-global/safe-client-gateway-sdk": "v1.60.1",
+    "@safe-global/safe-client-gateway-sdk": "1.60.1-next-069fa2b",
     "@safe-global/safe-gateway-typescript-sdk": "3.22.3-beta.15",
     "@safe-global/safe-modules-deployments": "^2.2.1",
     "@sentry/react": "^7.91.0",
