featr: Create static pending transactions screen (#18)
* feat: create pending tx screen

* feat: add pending transactions static layout in the home screen

* feat: add pending transactions slice in the api gateway

* feat: add new variant in the Alert component

* feat: create CircularBadge component to use it as the circular icon with text

* feat: put groupTx to respect SOLID definition

* feat: add lodash as project dependency

* feat: add missing parameters in the TxCards components

* feat: adjust reusable components layout

* feat: create pending transactions screen

* feat: generated snapshots

--- a/ios/safemobileapp/Info.plist
+++ b/ios/safemobileapp/Info.plist
@@ -46,13 +46,10 @@
     <key>NSUserActivityTypes</key>
     <array>
       <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
-      <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
-      <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
-      <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
-      <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
-      <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
-      <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
-      <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
+    </array>
+    <key>UIAppFonts</key>
+    <array>
+      <string>safe-icons.ttf</string>
     </array>
     <key>UILaunchStoryboardName</key>
     <string>SplashScreen</string>
