--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -76,6 +77,7 @@
     "@testing-library/react-native": "^12.7.2",
     "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.13",
     "@types/react": "~18.2.45",
     "babel-loader": "^8.4.1",
     "detox": "^20.27.2",
