--- a/package.json
+++ b/package.json
@@ -29,47 +29,46 @@
   "dependencies": {
     "@cowprotocol/app-data": "^2.3.0",
     "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^7.0.0",
     "@reduxjs/toolkit": "^2.2.8",
     "@safe-global/safe-gateway-typescript-sdk": "^3.22.2",
-    "@tamagui/babel-plugin": "^1.116.9",
-    "@tamagui/config": "^1.116.2",
-    "@tamagui/font-dm-sans": "^1.116.2",
-    "@tamagui/vite-plugin": "^1.116.9",
+    "@tamagui/babel-plugin": "^1.116.14",
+    "@tamagui/config": "^1.116.14",
+    "@tamagui/font-dm-sans": "^1.116.14",
     "date-fns": "^4.1.0",
     "deepmerge": "^4.3.1",
-    "expo": "~51.0.38",
-    "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.10",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
+    "expo": "^52.0.2",
+    "expo-constants": "~17.0.2",
+    "expo-font": "~13.0.1",
+    "expo-linking": "~7.0.2",
+    "expo-router": "~4.0.2",
+    "expo-splash-screen": "~0.29.6",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.2",
+    "expo-web-browser": "~14.0.0",
     "lodash": "^4.17.21",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-mmkv": "2.12.2",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-mmkv": "^3.1.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.0.0",
+    "react-native-web": "~0.19.13",
     "react-redux": "^9.1.2",
     "redux-devtools-expo-dev-plugin": "^0.2.1",
     "redux-persist": "^6.0.0",
     "safe-client-gateway-sdk": "git+https://github.com/safe-global/safe-client-gateway-sdk.git#v1.54.0-next-5b02a33",
-    "tamagui": "^1.116.2"
+    "tamagui": "^1.116.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@eslint/js": "^9.12.0",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.0.1",
-    "@react-native-community/slider": "4.5.2",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/slider": "4.5.5",
     "@storybook/addon-ondevice-actions": "^8.3.5",
     "@storybook/addon-ondevice-controls": "^8.3.5",
     "@storybook/react": "^8.3.5",
@@ -78,7 +77,7 @@
     "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.13",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "babel-loader": "^8.4.1",
     "detox": "^20.27.2",
     "eslint": "^9.12.0",
@@ -88,10 +87,10 @@
     "globals": "^15.11.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "~52.0.0",
     "lint-staged": "^15.2.10",
     "prettier": "3.3.3",
-    "react-native-svg": "15.2.0",
+    "react-native-svg": "15.8.0",
     "typescript": "~5.3.3",
     "typescript-eslint": "^8.8.1"
   },
