feat: use react-navigation header in screens (#21)
* feat: use react-navigation header in screens

* Update app/(tabs)/transactions/_layout.tsx

Co-authored-by: Clóvis Neto <clovisdasilvaneto@gmail.com>

* Update src/features/PendingTx/PendingTxList.tsx

Co-authored-by: Clóvis Neto <clovisdasilvaneto@gmail.com>

---------

Co-authored-by: Clóvis Neto <clovisdasilvaneto@gmail.com>

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@cowprotocol/app-data": "^2.3.0",
     "@expo/vector-icons": "^14.0.2",
+    "@react-navigation/material-top-tabs": "^7.0.1",
     "@react-navigation/native": "^7.0.0",
     "@reduxjs/toolkit": "^2.2.8",
     "@safe-global/safe-gateway-typescript-sdk": "^3.22.2",
@@ -52,9 +53,10 @@
     "react-native": "0.76.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-mmkv": "^3.1.0",
+    "react-native-pager-view": "6.4.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.0.0",
+    "react-native-screens": "^4.0.0",
     "react-native-web": "~0.19.13",
     "react-redux": "^9.1.2",
     "redux-devtools-expo-dev-plugin": "^0.2.1",
