--- a/package.json
+++ b/package.json
@@ -38,25 +38,25 @@
     "@tamagui/font-dm-sans": "^1.116.14",
     "date-fns": "^4.1.0",
     "deepmerge": "^4.3.1",
-    "expo": "^52.0.2",
+    "expo": "~52.0.7",
     "expo-constants": "~17.0.2",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.2",
-    "expo-router": "~4.0.2",
-    "expo-splash-screen": "~0.29.6",
+    "expo-router": "~4.0.6",
+    "expo-splash-screen": "~0.29.11",
     "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.2",
-    "expo-web-browser": "~14.0.0",
+    "expo-system-ui": "~4.0.3",
+    "expo-web-browser": "~14.0.1",
     "lodash": "^4.17.21",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.1",
+    "react-native": "0.76.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-mmkv": "^3.1.0",
     "react-native-pager-view": "6.4.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "^4.0.0",
+    "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
     "react-redux": "^9.1.2",
     "redux-devtools-expo-dev-plugin": "^0.2.1",
@@ -89,7 +89,7 @@
     "globals": "^15.11.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
-    "jest-expo": "~52.0.0",
+    "jest-expo": "~52.0.2",
     "lint-staged": "^15.2.10",
     "prettier": "3.3.3",
     "react-native-svg": "15.8.0",
