feat: use RTK code-generation for endpoints (#22)
* feature: RTK auto-generated endpoints

* chore: run prettier on the codebase

* chore: run prettier on the codebase

* refactor: tx pending & history tx types

* fix: remove usage of safe-gateway-typscript-sdk

* fix: clean up console.log

* refactor: pending & history tx cleanup

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,14 +1,5 @@
 {
-  "*.ts": [
-    "prettier --write",
-    "eslint"
-  ],
-  "*.tsx": [
-    "prettier --write",
-    "eslint"
-  ],
-  "assets/fonts/safe-icons/selection.json": [
-    "node ./scripts/generateIconTypes.js",
-    "git add ./src/types/iconTypes.ts"
-  ]
+  "*.ts": ["prettier --write", "eslint"],
+  "*.tsx": ["prettier --write", "eslint"],
+  "assets/fonts/safe-icons/selection.json": ["node ./scripts/generateIconTypes.js", "git add ./src/types/iconTypes.ts"]
 }
