--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --collectCoverageFrom=\"./src/**\"",
     "test:snapshots": "jest -u",
-    "lint": "eslint src/* app/*",
-    "lint:fix": "npm run lint -- --fix",
+    "lint": "npm run eslint",
+    "eslint": "eslint src/* app/*",
+    "eslint:fix": "npm run lint -- --fix",
+    "prettier": "prettier --check \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "prettier:fix": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "storybook-generate": "sb-rn-get-stories",
     "generate:icons": "node ./scripts/generateIconTypes.js",
-    "prepare": "husky"
+    "prepare": "husky",
+    "api-generate": " npx @rtk-query/codegen-openapi openapi-config.ts"
   },
   "dependencies": {
     "@cowprotocol/app-data": "^2.3.0",
@@ -32,7 +36,6 @@
     "@react-navigation/material-top-tabs": "^7.0.1",
     "@react-navigation/native": "^7.0.0",
     "@reduxjs/toolkit": "^2.2.8",
-    "@safe-global/safe-gateway-typescript-sdk": "^3.22.2",
     "@tamagui/babel-plugin": "^1.116.14",
     "@tamagui/config": "^1.116.14",
     "@tamagui/font-dm-sans": "^1.116.14",
@@ -59,9 +62,7 @@
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
     "react-redux": "^9.1.2",
-    "redux-devtools-expo-dev-plugin": "^1.0.0",
     "redux-persist": "^6.0.0",
-    "safe-client-gateway-sdk": "git+https://github.com/safe-global/safe-client-gateway-sdk.git#v1.54.0-next-5b02a33",
     "tamagui": "^1.116.14"
   },
   "devDependencies": {
@@ -71,6 +72,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/slider": "4.5.5",
+    "@rtk-query/codegen-openapi": "^2.0.0",
     "@storybook/addon-ondevice-actions": "^8.4.2",
     "@storybook/addon-ondevice-controls": "^8.4.2",
     "@storybook/react": "^8.4.2",
@@ -93,6 +95,8 @@
     "lint-staged": "^15.2.10",
     "prettier": "3.3.3",
     "react-native-svg": "15.8.0",
+    "redux-devtools-expo-dev-plugin": "^1.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "~5.3.3",
     "typescript-eslint": "^8.8.1"
   },
