--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "react-native-web": "~0.19.13",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
-    "tamagui": "^1.116.14"
+    "tamagui": "^1.116.14",
+    "timezone-mock": "^1.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
