--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "expo start",
     "storybook": "STORYBOOK_ENABLED='true' expo start",
+    "storybook:web": "STORYBOOK_ENABLED='true' STORYBOOK_WEB='true' storybook dev -p 6006",
     "storybook:ios": "STORYBOOK_ENABLED='true' expo run:ios --device",
     "storybook:android": "STORYBOOK_ENABLED='true' expo start --android",
     "reset-project": "node ./scripts/reset-project.js",
@@ -28,17 +29,22 @@
     "storybook-generate": "sb-rn-get-stories",
     "generate:icons": "node ./scripts/generateIconTypes.js",
     "prepare": "husky",
-    "api-generate": " npx @rtk-query/codegen-openapi openapi-config.ts"
+    "api-generate": " npx @rtk-query/codegen-openapi openapi-config.ts",
+    "build-storybook": "STORYBOOK_WEB='true' storybook build"
   },
   "dependencies": {
     "@cowprotocol/app-data": "^2.3.0",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native/babel-preset": "^0.76.2",
     "@react-navigation/material-top-tabs": "^7.0.1",
     "@react-navigation/native": "^7.0.0",
     "@reduxjs/toolkit": "^2.2.8",
-    "@tamagui/babel-plugin": "^1.116.14",
-    "@tamagui/config": "^1.116.14",
-    "@tamagui/font-dm-sans": "^1.116.14",
+    "@storybook/addon-react-native-web": "^0.0.26",
+    "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
+    "@tamagui/babel-plugin": "^1.117.0",
+    "@tamagui/config": "^1.117.0",
+    "@tamagui/font-dm-sans": "^1.117.0",
+    "babel-plugin-react-native-web": "^0.19.13",
     "date-fns": "^4.1.0",
     "deepmerge": "^4.3.1",
     "expo": "~52.0.7",
@@ -52,19 +58,20 @@
     "expo-web-browser": "~14.0.1",
     "lodash": "^4.17.21",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react-dom": "^18.3.1",
     "react-native": "0.76.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-mmkv": "^3.1.0",
     "react-native-pager-view": "6.4.1",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.13",
+    "react-native-web": "^0.19.13",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
-    "tamagui": "^1.116.14",
-    "timezone-mock": "^1.3.6"
+    "tamagui": "^1.117.0",
+    "timezone-mock": "^1.3.6",
+    "tsconfig-paths-webpack-plugin": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -74,10 +81,17 @@
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/slider": "4.5.5",
     "@rtk-query/codegen-openapi": "^2.0.0",
+    "@storybook/addon-essentials": "^8.4.5",
+    "@storybook/addon-interactions": "^8.4.5",
+    "@storybook/addon-onboarding": "^8.4.5",
     "@storybook/addon-ondevice-actions": "^8.4.2",
     "@storybook/addon-ondevice-controls": "^8.4.2",
-    "@storybook/react": "^8.4.2",
+    "@storybook/addon-webpack5-compiler-swc": "^1.0.5",
+    "@storybook/blocks": "^8.4.5",
+    "@storybook/react": "^8.4.5",
     "@storybook/react-native": "^8.4.2",
+    "@storybook/react-webpack5": "^8.4.5",
+    "@storybook/test": "^8.4.5",
     "@testing-library/react-native": "^12.7.2",
     "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.12",
