feat: automatically run unit tests on new PRs (#27) (#29)
fix: wrong types

fix: typescript compile errors

feat: run lint on new PRs

type node

.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --collectCoverageFrom=\"./src/**\"",
     "test:snapshots": "jest -u",
-    "lint": "npm run eslint",
+    "lint": "tsc && npm run eslint",
     "eslint": "eslint src/* app/*",
     "eslint:fix": "npm run lint -- --fix",
     "prettier": "prettier --check \"**/*.{js,jsx,ts,tsx,json,md}\"",
@@ -96,6 +96,7 @@
     "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.13",
+    "@types/node": "^22.9.1",
     "@types/react": "~18.3.12",
     "babel-loader": "^8.4.1",
     "detox": "^20.27.6",
