--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@safe-global/safe-modules-deployments": "^2.2.1",
     "@sentry/react": "^7.91.0",
     "@spindl-xyz/attribution-lite": "^1.4.0",
+    "@walletconnect/core": "^2.17.2",
     "@walletconnect/utils": "^2.17.2",
     "@web3-onboard/coinbase": "^2.2.6",
     "@web3-onboard/core": "^2.21.4",
