--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@cowprotocol/app-data": "^2.3.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-native/babel-preset": "^0.76.2",
+    "@react-native-community/blur": "^4.4.1",
     "@react-navigation/material-top-tabs": "^7.0.1",
     "@react-navigation/native": "^7.0.0",
     "@reduxjs/toolkit": "^2.2.8",
@@ -60,6 +61,7 @@
     "react": "18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.76.2",
+    "react-native-collapsible-tab-view": "^8.0.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-mmkv": "^3.1.0",
     "react-native-pager-view": "6.4.1",
@@ -76,7 +78,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@eslint/js": "^9.12.0",
-    "@gorhom/bottom-sheet": "^4.6.4",
+    "@gorhom/bottom-sheet": "^5.0.6",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/slider": "4.5.5",
