feat: Cover assets screen with unit tests (#36)
* feat: create safe tab component

* feat: create dropdown component

* feat: create assets features layout

* feat: adjust styles of shared components

* feat: allow user to show a transparent transaction list card

* feat: adjust SafeTab component to control the active tab in the main component

* feat: add dropdown component into the assets header

* feat: integrate user balance with CGW

* feat: adjust transactions-list components colors

* feat: change default active wallet

* feat: create Logo component to use it for any token or contract logo

* feat: adjust SafeListItem colors

* feat: integrate tokens and nfts list with CGW data

* feat: create NoFunds component to show the empty assets icon when no funds were found

* fix: do not show pending transactions component when there isn't any pending tx

* feat: add component to render the select chain dropdown sheet template

* fix: change CGW hooks imports

* fix: re-use the fallback markup in the assets list

* feat: separate bottom sheet components

* feat: change SafeOverview type import

* feat: optmize functions with useCallback

* feat: move assets render item function to a separated component

* fix: tslint

* feat: add unit tests for reusable components

* fix: coverage command

* fix: dropdown tests

* fix: typo

* chore: remove snapshot tests from Alert component

* chore: remove unused component

* chore: remove snapshot tests from dropdown component

* chore: decrease amount of snapshot tests

* chore: remove snapshots from safeAppCard component

* chore: remove snapshots from RejectionCard component

* chore: adjust loading fallback in the assets screen

* chore: assert more precise informations about the alert component

* fix: eslint

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "web": "expo start --web",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage --collectCoverageFrom=\"./src/**\"",
+    "test:coverage": "jest --coverage",
     "test:snapshots": "jest -u",
     "lint": "tsc && npm run eslint",
     "eslint": "eslint src/* app/*",
