--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   "dependencies": {
     "@cowprotocol/app-data": "^2.3.0",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-clipboard/clipboard": "^1.15.0",
+    "@react-native-menu/menu": "^1.1.6",
     "@react-native/babel-preset": "^0.76.2",
     "@react-native-community/blur": "^4.4.1",
     "@react-navigation/material-top-tabs": "^7.0.1",
@@ -42,15 +44,21 @@
     "@reduxjs/toolkit": "^2.2.8",
     "@storybook/addon-react-native-web": "^0.0.26",
     "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
-    "@tamagui/babel-plugin": "^1.117.0",
-    "@tamagui/config": "^1.117.0",
-    "@tamagui/font-dm-sans": "^1.117.0",
+    "@tamagui/animations-moti": "^1.117.1",
+    "@tamagui/babel-plugin": "^1.117.1",
+    "@tamagui/config": "^1.117.1",
+    "@tamagui/font-dm-sans": "^1.117.1",
+    "@tamagui/toast": "^1.117.1",
     "babel-plugin-react-native-web": "^0.19.13",
+    "blo": "^1.2.0",
+    "burnt": "^0.12.2",
     "date-fns": "^4.1.0",
     "deepmerge": "^4.3.1",
     "expo": "~52.0.7",
     "expo-constants": "~17.0.2",
     "expo-font": "~13.0.1",
+    "expo-image": "~2.0.1",
+    "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.6",
     "expo-splash-screen": "~0.29.11",
@@ -58,6 +66,7 @@
     "expo-system-ui": "~4.0.3",
     "expo-web-browser": "~14.0.1",
     "lodash": "^4.17.21",
+    "moti": "^0.29.0",
     "react": "18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.76.2",
@@ -71,7 +80,7 @@
     "react-native-web": "^0.19.13",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
-    "tamagui": "^1.117.0",
+    "tamagui": "^1.117.1",
     "timezone-mock": "^1.3.6",
     "tsconfig-paths-webpack-plugin": "^4.2.0"
   },
