Docs: update .env.example

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,15 @@
 NEXT_PUBLIC_INFURA_TOKEN=
 NEXT_PUBLIC_SAFE_APPS_INFURA_TOKEN=
 
+# WalletConnect
+NEXT_PUBLIC_WC_PROJECT_ID=
+
 ## CGW
 NEXT_PUBLIC_GATEWAY_URL_PRODUCTION=
 NEXT_PUBLIC_GATEWAY_URL_STAGING=
+
+# Blockaid
+NEXT_PUBLIC_BLOCKAID_CLIENT_ID=
 
 # Transaction simulation
 NEXT_PUBLIC_TENDERLY_SIMULATE_ENDPOINT_URL=
@@ -17,15 +23,11 @@ NEXT_PUBLIC_IS_PRODUCTION=
 # Latest supported safe version, used for upgrade prompts
 NEXT_PUBLIC_SAFE_VERSION=
 
-# Access keys
+# Sentry
 NEXT_PUBLIC_SENTRY_DSN=
+
+# Beamer
 NEXT_PUBLIC_BEAMER_ID=
-
-# Wallet-specific variables
-NEXT_PUBLIC_WC_PROJECT_ID=
-
-# E2E tests
-NEXT_PUBLIC_CYPRESS_MNEMONIC=
 
 # Safe Gelato relay service
 NEXT_PUBLIC_SAFE_GELATO_RELAY_SERVICE_URL_PRODUCTION=
@@ -34,16 +36,8 @@ NEXT_PUBLIC_SAFE_GELATO_RELAY_SERVICE_URL_STAGING=
 # Firebase Cloud Messaging
 NEXT_PUBLIC_FIREBASE_OPTIONS_PRODUCTION=
 NEXT_PUBLIC_FIREBASE_VAPID_KEY_PRODUCTION=
-
 NEXT_PUBLIC_FIREBASE_OPTIONS_STAGING=
 NEXT_PUBLIC_FIREBASE_VAPID_KEY_STAGING=
-
-# Blockaid
-NEXT_PUBLIC_BLOCKAID_CLIENT_ID
-
-# Social Login
-NEXT_PUBLIC_SOCIAL_WALLET_OPTIONS_STAGING=
-NEXT_PUBLIC_SOCIAL_WALLET_OPTIONS_PRODUCTION=
 
 # Cypress wallet private keys
 CYPRESS_WALLET_CREDENTIALS=
