--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     "redux-persist": "^6.0.0",
     "tamagui": "^1.117.1",
     "timezone-mock": "^1.3.6",
-    "tsconfig-paths-webpack-plugin": "^4.2.0"
+    "tsconfig-paths-webpack-plugin": "^4.2.0",
+    "expo-blur": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
